[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["mohammad silwadi <mohammadsilwadi1@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
numpy = "1.21.1"
matplotlib = "^3.4.3"
jupyterlab = "^3.2.1"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
